--- a/chapter2.tex
+++ b/chapter2.tex
@@ -89,7 +89,7 @@ Agent: These are actors that facilitate the execution of a process.An agent is r
 
 OPM denotes all previous and current actions that have been performed on an entity and  the relationship between each entities contained in the graph. Figure 2 represents an example of an OPM acyclic graph with all of its causal dependencies. The goal of OPM is to be able to model the state of how things both digital or physical are at a given state.   
 
-\begin{figure}
+\begin{figure}[h!]
 \begin{center}
 
 \includegraphics{opm_convention.PNG}
@@ -147,7 +147,7 @@ Prov-DM contains similar yet subtle differences between OPM.Some of the differen
 
 \item wasAssociatedWith:This relation denotes a direct association to an agent for an activity that occurs.This indicates that an agent plays a role in the creation or modification of the activity.
 
-\item ActedOnBehalfOf
+\item ActedOnBehalfOf: This denotes assigning authority to perform a particular responsibility to an agent. This could be by itself or to another agent.
 
 \item
 
