--- a/thesis.tex
+++ b/thesis.tex
@@ -45,10 +45,10 @@
                  {Gloria Washington, Ph.D.}
                  
 %Uncomment if you have a fourth member on your committee
-\AdditionalMember{Robert RubenGuira, Ph.D.}
+\AdditionalMember{Robert Rwebangira, Ph.D.}
 				
 
-\GradSchoolDean{Pablo Arenaz, Ph.D.}
+\GradSchoolDean{Messac Arenaz, Ph.D.}
 
 %Produce the signature page
 \makesigpage
@@ -61,12 +61,12 @@ Ebelechukwu Nwafor\\[0.2in]
 2016
 \end{CenteredPage}
 
-%Delete if you don't want a dedication
-\begin{CenteredPage}
-{\it to my\\[0.2in]
-MOTHER and FATHER\\[0.2in]
-thanks for all the love and support, i am forever grateful}
-\end{CenteredPage}
+%%Delete if you don't want a dedication
+%\begin{CenteredPage}
+%{\it to my\\[0.2in]
+%MOTHER and FATHER\\[0.2in]
+%thanks for all the love and support, i am forever grateful}
+%\end{CenteredPage}
 \maketitlepage
 
 \include{acknowl}       % Acknowledgements, optional
@@ -81,7 +81,7 @@ thanks for all the love and support, i am forever grateful}
 
 % If you use a list of figures, uncomment the next line
 % It is required if the document contains three or more figures
-%\listoffigures
+\listoffigures
 
 % Here would go optional list of illustrations, maps, slides
 
@@ -95,10 +95,10 @@ thanks for all the love and support, i am forever grateful}
 \include{chapter1}         % Introductory Chapter
 \include{chapter2}         % Chapter 2
 \include{chapter3}         % Chapter 3
-\include{chapter4}         % Chapter 4
-\include{chapter5}         % Chapter 5
+%\include{chapter4}         % Chapter 4
+%\include{chapter5}         % Chapter 5
 \include{chapter6}         % Chapter 6
-\include{chapter7}         % Chapter 7, chap7.tex contains an
+%\include{chapter7}         % Chapter 7, chap7.tex contains an
                         % example of figs and tables and inclusion of pdf.
 
 %%%%%%%%%%%%%%%%%%%%
@@ -120,10 +120,10 @@ thanks for all the love and support, i am forever grateful}
 
 % If including appendices, uncomment the following lines,
 % adding more includes if needed.
-%\StartAppendix
+\StartAppendix
 %\include{AppendixA}         % Example of how to include an appendix
 
-\include{vitae}         % Curriculum Vitae      REQUIRED
+%\include{vitae}         % Curriculum Vitae      REQUIRED
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
