--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,111 +1,32 @@
 % chap3.tex (Definitions and Theorem)
 
-\chapter{Solving Interval Linear Systems Is NP-Hard: Known Result}
+\chapter{Proposed Model}
 
-In this chapter we will define formally what it means to solve a system of
-interval linear equations and present a negative result related to such
-systems that was first discovered by Kreinovich, Lakeyev and Noskov in the
-early 1990's.
+In this chapter we define all of the components of our proposed model. From the provenance-aware system which deals with the collection, storage and querying of provenance data from IoT devices to the  IDS system which deals with detecting malicious attacks on IoT Devices.
 
-\section{Definitions}
+\section{Provenance-Collection System}
 
-\begin{definition}
-{\rm An expression of the form
-\begin{equation}
-  \sum_{j=1}^n [a_j^-,a_j^+] x_j = [b^-,b^+] \label{intlineq}
-\end{equation}
-is called an {\em interval linear equation\/} with $n$ unknowns,
-$x_1,\ldots,x_n$.}
-\end{definition}
+In this section, we outline the components of our system and describe how provenance information is collected across the IoT system. Figure 1 displays the system architecture of our approach. Sensor and actuator readings in the form of I/O are recorded by the tracer component. This component intercepts system level I/O and produces trace information in the Common Trace Format (CTF). CTF represents binary trace information containing multiple streams of binary events such as I/O activity. Trace information is converted into the Open Provenance Model (OPM), which represents the relationship between provenance entities contained in the system. Our system relies heavily on data pruning to reduce and remove unimportant provenance in order to conserve memory. The key research challenge is in creating an efficient data pruning technique that ranks I/O operations based on importance. Pruned provenance information is later securely transmitted and stored in a private cloud backend.
 
-\begin{definition} \label{solutiondef}
-{\rm Let
-\begin{equation}
-  \sum_{j=1}^n [a_{ij}^-, a_{ij}^+] x_j = [b_i^-, b_i^+] \label{d1}
-\end{equation}
-for $i=1,\ldots,m$ be a {\em system of interval linear equations}.  The
-tuple $(x_1,\ldots,x_n)$ is called a {\em solution\/} of the system (\ref{d1})
-if there exist values $a_{ij}\in[a_{ij}^-,a_{ij}^+]$ and $b_i\in[b_i^-,b_i^+]$
-such that
-$$
-  \sum_{j=1}^n a_{ij} x_j = b_i
-$$
-for all $i=1,\ldots,m$.}
-\end{definition}
+\begin{figure}[h!]
+\begin{center}
 
-\begin{definition}\label{solvingdef}
-{\rm By {\em solving\/} a system (\ref{d1}) of interval linear equations, we
-mean computing the bounds $x_j^-$ and $x_j^+$ where
-$$
-  x_j^-=\min\{x_j|(x_1,\ldots,x_n)
-   {\rm\ is\ a\ solution\ to\ system\ (\ref{d1})}\}
-$$
-and
-$$
-  x_j^+=\max\{x_j|(x_1,\ldots,x_n)
-   {\rm\ is\ a\ solution\ to\ system\ (\ref{d1})}\}
-$$
-for all $j=1,\ldots,n$.}
-\end{definition}
+\includegraphics{architecture.PNG}    
+\end{center}
+\caption{Edges and entities in OPM}
+\label{autom}
+\end{figure}
 
-To clarify the problem, consider a (hypothetical) feasible algorithm that can
-be used to solve any system of interval linear equations.  Such an algorithm
-would require the following input to be given:
+The goal of our research is to create a provenance aware system that records I/O operations on data for devices connected in an IoT system. For our implementation, several tools and hardware components are utilized in the development of our prototype, some of the tools utilized are outlined below:
+
 \begin{itemize}
-\item the number of equations $m$,
-\item the number of unknowns $n$,
-\item the endpoints $a_{ij}^-$ and $a_{ij}^+$ for all $i=1,\ldots,m$ and
-      $j=1,\ldots,n$, and
-\item the endpoints $b_i^-$ and $b_i^+$ for all $i=1,\ldots,m$.
-\end{itemize}
-Such input would define a particular system of the form (\ref{d1}).  For the
-algorithm to be feasible it must be able, given any particular system
-defined by the input, to compute in polynomial time the following output:
-\begin{itemize}
-\item the endpoints $x_j^-$ and $x_j^+$ such that
-$$
-  x_j^-=\min\{x_j|(x_1,\ldots,x_n)
-   {\rm\ is\ a\ solution\ to\ the\ given\ system}\}
-$$
-and
-$$
-  x_j^+=\max\{x_j|(x_1,\ldots,x_n)
-   {\rm\ is\ a\ solution\ to\ the\ given\ system}\}
-$$
-for all $j=1,\ldots,n$.
+\item Xilinx Zynq ZedBoard and TI TM4C129E. These devices are microcontrollers used to evaluate our approach. We choose the Xilinx Zynq ZedBoard because it is a representation of what can be found on an IoT gateway device and it has the capability to include custom hardware in programmable logic. Also, TM4C is a low­cost, simple IoT demonstrator that was chosen for its high­performance, on­board emulation, and IoT gateway projects can be programmed without additional need for hardware tools.
+
+\item Real Time Executive for Multiprocessor Systems (RTEMS) is an open source real­time operating system (RTOS) for embedded systems. This operating system is a typical RTOS that may be deployed in IoT devices.
+
 \end{itemize}
 
-\section{Theorem}
 
-\begin{theorem}
-The problem of solving systems of interval linear equations is computationally
-intractable (\/{\rm NP}-hard). \label{t1}
-\end{theorem}
+\section{PAIST: Provenance Aware IDS System for IoT }
 
-\medskip
-
-\noindent
-This theorem was proven (see~\cite{Kreinovich1993}) in 1993 by Kreinovich,
-Lakeyev and Noskov by a reduction from SAT\footnote{Recall from chapter
-\ref{NP-HARD-CHAP} that SAT is the problem of satisfiability of Boolean
-formulas.}.
-
-\section{What If Intervals Are Narrow?}
-The proof of theorem \ref{t1} uses intervals that are of type $[0,1]$ that
-correspond, in measurement terms, to measuring a value of magnitude $0.5$ 
-with an absolute accuracy of $0.5$, or a relative accuracy of 
-$100\%$. Such measurements, though possible, are not very accurate. 
-Most measuring devices of practical use in science and industry are far more
-accurate, and hence, intervals are much narrower.  The natural question is:
-
-
-\begin{quote}
-{\it If we restrict ourselves to systems with narrow intervals only, will the
-problem of solving systems of interval linear equations still be\/
-{\rm NP}-hard?}
-\end{quote}
-
-\noindent
-This question was first analyzed by Lakeyev and Kreinovich in 1995 
-(see~\cite{Lakeyev1995}).  In the next chapter we will present the result of 
-that analysis.
+This section outlines the core functionalities of our model PAIST. 
