--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % thesis.tex
 
 \documentclass[12pt]{report}
-
+\usepackage[usenames, dvipsnames]{color}
 \usepackage{utepcsthesis}
 \usepackage{graphics}
 \usepackage {tikz}
