--- a/abstract.tex
+++ b/abstract.tex
@@ -6,7 +6,8 @@
 The concept of Internet of Things (IoT) offers immense benefits by
 enabling devices to leverage networked resources thereby making more intelligent
 decisions. The numerous heterogeneous connected devices that exist throughout
-the IoT system creates new security and privacy concerns. Some of these concerns can
+the IoT system creates new security and privacy concerns. \textcolor{red}{The numerous heterogeneous connected devices that exist throughout
+the IoT system creates new security and privacy paradigm which encompases various security issues from different areas of research .} .Some of these concerns can
 be overcome through data trust, transparency, and integrity, which can be
-achieved with data provenance. Data provenance also known as data lineage provides a history of transactions that occurs on a data object from the time it was created to its current state.Data provenance has immense benefits in detecting and mitigating current and future vulnerability attacks and has applications in intrusion detection, access control, and digital forensics.  \par This dissertation looks at provenance with a focus on IoT devices. It takes a holistic approach in the creation, security and application of provenance data to mitigating malicious attacks. We create a secure provenance aware system for IoT devices.This system ensures trust and helps establish causality for decisions and actions taken by an IoT connected system. As a result of the amount of data that is generated from our data provenance system, there arises an issue of running out of memory.To address this issue, we propose a novel data pruning technique that provides optimal storage of provenance data contained in the IoT device.We conclude by looking at the applications of provenance for security of malicious attacks by focusing on intrusion detection of malicious threats.We propose an intrusion detection system for IoT devices. The provenance generated from the IoT devices can provide valuable insights that could be used to detect and record abnormal patterns that might exist in a causal relationship between entities contained in the provenance chain.
+achieved with data provenance. Data provenance also known as data lineage provides a history of transactions that occurs on a data object from the time it was created to its current state.Data Provenance has been explored in the areas of scientific computing and buisness to track the workflow processes,also in field of computer security for forensic analysis and intrusion detection.Data provenance has immense benefits that provenance offers in detecting and mitigating current and future malicious attacks.  \par This dissertation, we explore provenance with a focus on IoT devices. This dissertation takes an in depth look  in the creation, security and applications of provenance data to mitigating malicious attacks. We define our model constructs for representing IoT provenance data. We create a secure provenance aware system for IoT devices.This system ensures trust and helps establish causality for decisions and actions taken by an IoT connected system. As a result of the amount of data that is generated from our data provenance system, there arises an issue of running out of memory.To address this issue, we propose a novel data pruning technique that provides optimal storage of provenance data contained in the IoT device.We conclude by looking at the applications of provenance for security of malicious attacks by focusing on intrusion detection of malicious threats.We propose an intrusion detection system for IoT devices. The provenance generated from the IoT devices can provide valuable insights that could be used to detect and record abnormal patterns that might exist in a causal relationship between entities contained in the provenance chain.
 
